# oklahoma_earthquakes

./: LICENSE  README.md  devbox.json  makeMap.py  make_map.py  pyproject.toml  requirements.txt
.github/: pull.yml
pages/: index.html
templates/: base.html  index.html  map.html
